loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:4: error: not found: value pickUpBaggle
pickUpBaggle() 
^